--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,18 @@
         </div>
     </header>
     <main>
-        text
+        <form action="">
+            <label for="nombreapellido">Nombre y Apellido</label>
+            <input type="text" id="nombreapellido">
+
+            <label for="correoelectronico">Correo Electronico</label>
+            <input type="text" id="correoelectronico">
+
+            <label for="telefono">Telefono</label>
+            <input type="text" id="telefono">
+
+            <input type="submit" value="Enviar formulario">
+        </form>
     </main>
     <footer>
         <img src="imagenes/logo-blanco.png">
