--- a/contacto.html
+++ b/contacto.html
@@ -61,8 +61,31 @@
 
             <label class="checkbox"><input type="checkbox" name="" checked>Le gustaria recibir novedades de la barberia alura?</label>
 
-            <input type="submit" value="Enviar formulario">
+            <input class="enviar" type="submit" value="Enviar formulario">
         </form>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Dia</th>
+                    <th>Horario</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lunes</td>
+                    <td>08h - 20h</td>
+                </tr>
+                <tr>
+                    <td>Miercoles</td>
+                    <td>08h - 20h</td>
+                </tr>
+                <tr>
+                    <td>Viernes</td>
+                    <td>08h - 20h</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <footer>
         <img src="imagenes/logo-blanco.png">
